data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2212.wast
;; 3. **Conditional Branch Mismanagement**:    Craft a nested block scenario where a `br_if` conditionally branches out of an inner block to an outer block, testing if the control flow maintains stack and execution state accurately. This might reveal failures in conditional branching within nested structures.

(assert_invalid
  (module
    (func $conditional_branch_mismanagement
      (block (result i32)
        (i32.const 0)
        (block (result i32)
          (i32.const 1)
          (br_if 1 (i32.const 1))
          (i32.const 2)
        )
        (i32.const 3)
      )
    )
  )
  "type mismatch"
)